--- a/telegram_gcloner/config.ini
+++ b/telegram_gcloner/config.ini
@@ -1,8 +1,8 @@
 [General]
 path_to_gclone =./fclone
 
-telegram_token = 5335442865:AAHVcP4_GAptYXChNI_xln6xRLqCeOyHpDw
-user_ids = 1181342440
+telegram_token = 
+user_ids = 
 group_ids = -1
 
 gclone_para_override =
